--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -6,3 +6,23 @@
   volume = {5},
   year = {1943}
 }
+
+@article{rumelhart1986learning,
+  title={Learning representations by back-propagating errors},
+  author={Rumelhart, David E and Hinton, Geoffrey E and Williams, Ronald J},
+  journal={Nature},
+  volume={323},
+  number={6088},
+  pages={533--536},
+  year={1986},
+  publisher={Nature Publishing Group}
+}
+
+@misc{khapra2018deeplearning,
+  author       = {Mitesh M. Khapra},
+  title        = {CS7015: Deep Learning},
+  year         = {2018},
+  note         = {Lecture Series, Department of Computer Science and Engineering, IIT Madras},
+  url          = {https://www.cse.iitm.ac.in/~miteshk/CS7015_2018.html},
+  howpublished = {\url{https://www.cse.iitm.ac.in/~miteshk/CS7015_2018.html}}
+}
